--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 	</div>
 	<div class="content">
 		<div class="container">
-			<div class="video">
-				<img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/10838431_357734814398732_1255344475_n.jpg" alt="">
+			<div class="video-box">
+				<div class="video">
+					<!-- <video height="640" width="640" autoplay controls>
+						<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
+					</video> -->
+				</div>
 				<div class="controls">
 					<button>Prev</button>
 					<button>Next</button>
@@ -27,7 +31,7 @@
 			</div>
 			<div class="metadata">
 				<h3 class="caption">This is my caption for a #hyperlapse video</h3>
-				<p class="credit">Taken by @<span>taykcrane</span></p>
+				<p class="credit">Taken by <a href="#" target="_blank">@taykcrane</a></p>
 				<p class="timestamp">51 minutes ago</p>
 				<p class="location">New York, New York</p>
 			</div>	
@@ -36,6 +40,7 @@
 
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
