--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				</div>
 			</div>
 			<div class="metadata">
-				<h3 class="caption">This is my caption for a #hyperlapse video</h3>
-				<p class="credit">Taken by <a href="#" target="_blank">@taykcrane</a></p>
-				<p class="timestamp">51 minutes ago</p>
+				<h3 class="caption"></h3>
+				<p class="credit">Taken by <a href="#" target="_blank"></a></p>
+				<p class="timestamp"></p>
 				<p class="location">New York, New York</p>
 			</div>	
 		</div>	
