--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvvZfEiUoVm-Rs9q2cs3SKeP79uMG_d0"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
