next and prev buttons are ... kinda working

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					</video> -->
 				</div>
 				<div class="controls">
-					<button>Prev</button>
-					<button>Next</button>
+					<button class="prev">Prev</button>
+					<button class="next">Next</button>
 				</div>
 				<div class="desintation">
 					<p>Travel to a different destination?</p>
