gets new videos when current set runs out

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 	<div class="content">
 		<div class="container">
 			<div class="video-box">
+				<p class="videoNum">1</p>
+				<p class="totalVideos">/<span></span></p>
 				<div class="video">
 					<!-- <video height="640" width="640" autoplay controls>
 						<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
 					</video> -->
 				</div>
 				<div class="controls">
-					<button class="prev">Prev</button>
+					<button class="prev" disabled>Prev</button>
 					<button class="next">Next</button>
 				</div>
 				<div class="desintation">
