--- a/index.html
+++ b/index.html
@@ -7,38 +7,40 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<div class="header">
-		<div class="container">
-			<h1>Hyperlax</h1>
-			<h3>Explore faraway cities just by hitting the NEXT button.</h3>
+	<div class="flexcontainer">
+		<div class="video-box">
+			<div class="video">
+				<!-- <video height="640" width="640" autoplay controls>
+					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
+				</video> -->
+			</div>
 		</div>
-	</div>
-	<div class="content">
-		<div class="container">
-			<div class="video-box">
-				<p class="videoNum">1</p>
-				<p class="totalVideos">/<span></span></p>
-				<div class="video">
-					<!-- <video height="640" width="640" autoplay controls>
-						<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
-					</video> -->
-				</div>
-				<div class="controls">
-					<button class="prev" disabled>Prev</button>
-					<button class="next">Next</button>
-				</div>
-				<div class="desintation">
-					<p>Travel to a different destination?</p>
+		<div class="flexitem">
+			<div class="header">
+				<div class="container">
+					<h1>Hyperlax</h1>
+					<h3>Explore faraway cities just by hitting the NEXT button.</h3>
 				</div>
 			</div>
-			<div class="metadata">
-				<h3 class="caption"></h3>
-				<p class="credit"><!-- Taken by <a href="#" target="_blank"></a> --></p>
-				<p class="timestamp"></p>
-				<p class="location"></p>
+			<div class="content">
+				<div class="container">
+					<div class="metadata">
+						<p class="videoNum">1</p>
+						<p class="totalVideos">/<span></span></p>
+						<h3 class="caption"></h3>
+						<p class="credit"><!-- Taken by <a href="#" target="_blank"></a> --></p>
+						<p class="timestamp"></p>
+						<p class="location"></p>
+						<div class="controls">
+							<button class="prev" disabled>Prev</button>
+							<button class="next">Next</button>
+						</div>
+					</div>	
+				</div>	
 			</div>	
-		</div>	
+		</div>
 	</div>
+	
 
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
