--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="google" content="notranslate" />
+	<meta http-equiv="Content-Language" content="en_US" />
 	<title>Hyperlax</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div class="flexcontainer">
@@ -18,22 +21,23 @@
 		<div class="flexitem">
 			<div class="header">
 				<div class="container">
-					<h1>Hyperlax</h1>
-					<h3>Explore faraway cities just by hitting the NEXT button.</h3>
+					<h1>Hyper<span>lax</span></h1>
+					<h3>Explore faraway places just by hitting the <i class="fa fa-forward fa-lg"></i> button.</h3>
 				</div>
 			</div>
 			<div class="content">
 				<div class="container">
 					<div class="metadata">
-						<p class="videoNum">1</p>
-						<p class="totalVideos">/<span></span></p>
-						<h3 class="caption"></h3>
+						<!-- <p class="videoNum">1</p>
+						<p class="totalVideos">/<span></span></p> -->
+						<h3 class="caption"><i class="fa fa-quote-left fa-3x"></i><p></p></h3>
 						<p class="credit"><!-- Taken by <a href="#" target="_blank"></a> --></p>
 						<p class="timestamp"></p>
 						<p class="location"></p>
+						<div id="myMap"></div>
 						<div class="controls">
-							<button class="prev" disabled>Prev</button>
-							<button class="next">Next</button>
+							<button class="prev" disabled><i class="fa fa-backward fa-2x"></i></button>
+							<button class="next"><i class="fa fa-forward fa-2x"></i></button>
 						</div>
 					</div>	
 				</div>	
@@ -46,6 +50,12 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYvvZfEiUoVm-Rs9q2cs3SKeP79uMG_d0"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+<script src="js/datamaps.js"></script>
+<script>
+    var map = new Datamap({element: document.getElementById('myMap')});
+</script>
 <script src="js/app.js"></script>
 </body>
 </html>
