began working with soundcloud api and styling

--- a/index.html
+++ b/index.html
@@ -37,10 +37,22 @@
 						<div id="myMap"></div>
 						<div class="controls">
 							<button class="prev" disabled><i class="fa fa-backward fa-2x"></i></button>
+							<button class="pause-play"><i class="fa fa-pause fa-2x"></i></button>
 							<button class="next"><i class="fa fa-forward fa-2x"></i></button>
 						</div>
 					</div>	
 				</div>	
+			</div>
+			<div class="music-player">
+				<div class="container">
+					<button class="music-pause-play"><i class="fa fa-pause fa-2x"></i></button>
+					<button class="music-next"><i class="fa fa-forward fa-2x"></i></button>
+					<div class="music-data">
+						<p class="title">Song Title</p>
+						<p class="artist">Artist Name</p>
+					</div>
+					<div class="sc-logo"></div>
+				</div>
 			</div>	
 		</div>
 	</div>
@@ -54,6 +66,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 <script src="js/datamaps.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="http://connect.soundcloud.com/sdk.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
