beginning to hack away at the soundcloud API

--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
 			</div>
 			<div class="music-player">
 				<div class="container">
-					<button class="music-pause-play"><i class="fa fa-pause fa-2x"></i></button>
-					<button class="music-next"><i class="fa fa-forward fa-2x"></i></button>
-					<div class="music-data">
-						<p class="title">Song Title</p>
-						<p class="artist">Artist Name</p>
-					</div>
-					<div class="sc-logo"></div>
+					<div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text"><p class="title">Song Title<span class="artist">Artist Name</span></p><p class="uploader">Uploaded by: Uploader name</p></div><div class="sc-logo"></div></div>
 				</div>
 			</div>	
 		</div>
