styling the main components of the page

--- a/index.html
+++ b/index.html
@@ -28,17 +28,25 @@
 			<div class="content">
 				<div class="container">
 					<div class="metadata">
-						<!-- <p class="videoNum">1</p>
-						<p class="totalVideos">/<span></span></p> -->
-						<h3 class="caption"><i class="fa fa-quote-left fa-3x"></i><p></p></h3>
+						<div class="controls">
+							<div class="buttons">
+								<div class="prev" disabled><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
+							</div>
+						</div>
+						<h3 class="caption">
+							<i class="fa fa-quote-left fa-3x"></i>
+							<p></p>
+						</h3>
 						<p class="credit"><!-- Taken by <a href="#" target="_blank"></a> --></p>
 						<p class="timestamp"></p>
-						<p class="location"></p>
-						<div id="myMap"></div>
-						<div class="controls">
-							<button class="prev" disabled><i class="fa fa-backward fa-2x"></i></button>
-							<button class="pause-play"><i class="fa fa-pause fa-2x"></i></button>
-							<button class="next"><i class="fa fa-forward fa-2x"></i></button>
+						<div class="location-group">
+							<h3 class="location">
+								<i class="fa fa-map-marker fa-2x"></i>
+								<p class="location-text"></p>
+							</h3>
+							<!-- <hr class="rule-1" size="1" noshade color="black">
+							<hr class="rule-2" size="1" noshade color="#999"> -->
+							<div id="myMap"></div>
 						</div>
 					</div>	
 				</div>	
