--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="music-player">
 				<div class="container">
-					<div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text"><p class="title">Song Title<span class="artist">Artist Name</span></p><p class="uploader">Uploaded by: Uploader name</p></div><div class="sc-logo"></div></div>
+					<div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text"><p class="title"></p><p class="uploader"></p></div><a href="#" class="sc-logo" target="_blank"></a></div>
 				</div>
 			</div>	
 		</div>
