--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 <script src="js/datamaps.js"></script>
+<script src="js/pause.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://connect.soundcloud.com/sdk.js"></script>
 <script src="js/app.js"></script>
