refactored the music bar and added a static volume button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 			</div>
 			<div class="music-player">
 				<div class="container">
-					<div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text"><p class="title"></p><p class="uploader"></p></div><a href="#" class="sc-logo" target="_blank"></a></div>
+					<div class="music-box">
+						<div class="volume"><i class="fa fa-volume-up fa-lg"></i></div><div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text-bg"><div class="music-text"><p class="title"></p><p class="uploader"></p></div></div><a href="#" class="sc-logo" target="_blank"></a></div>
+					</div>
 				</div>
 			</div>	
 		</div>
