added recent videos but failing at video emptying bug

--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 <body>
 	<div class="flexcontainer">
 		<div class="video-box">
-			<div class="video">
+			<div class="video active">
 				<!-- <video height="640" width="640" autoplay controls>
 					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
 				</video> -->
+			</div>
+			<div class="video hidden">
+				<!-- <div class="test-box" height="640px" width="640px"></div> -->
+				<video height="640" width="640">
+					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
+				</video>
 			</div>
 		</div>
 		<div class="flexitem">
@@ -30,7 +36,7 @@
 					<div class="metadata">
 						<div class="controls">
 							<div class="buttons">
-								<div class="prev" disabled><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
+								<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
 							</div>
 						</div>
 						<h3 class="caption">
