--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 	<div class="flexcontainer">
 		<div class="video-box">
-			<div class="video active">
+			<div class="video-active">
 				<!-- <video height="640" width="640" autoplay controls>
 					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
 				</video> -->
 			</div>
-			<div class="video hidden">
+			<div class="video-hidden">
 				<!-- <div class="test-box" height="640px" width="640px"></div> -->
-				<video height="640" width="640">
+				<video height="100%" width="100%" controls>
 					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
 				</video>
 			</div>
