refactored to add hidden and active videos for smooth playback

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
 				</video> -->
 			</div>
-			<div class="video-hidden">
-				<!-- <div class="test-box" height="640px" width="640px"></div> -->
+			<!-- <div class="video-hidden">
 				<video height="100%" width="100%" controls>
 					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
 				</video>
-			</div>
+			</div> -->
 		</div>
 		<div class="flexitem">
 			<div class="header">
