finalizing to create v0.8

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 			</div> -->
 		</div>
 		<div class="flexitem">
+			<!-- <div class="nav">
+				<ul class="nav-items">
+					<li><a href="#">Hyperlax</a>
+					<li><a href="#">location</a>
+					<li><a href="#">music</a>
+					<li><a href="#">about</a>
+					<li><a href="#">@taykcrane</a>
+				</ul>
+			</div> -->
 			<div class="header">
 				<div class="container">
 					<h1>Hyper<span>lax</span></h1>
