styled the nav bar

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 			</div> -->
 		</div>
 		<div class="flexitem">
-			<!-- <div class="nav">
+			<div class="nav">
 				<ul class="nav-items">
-					<li><a href="#">Hyperlax</a>
-					<li><a href="#">location</a>
-					<li><a href="#">music</a>
-					<li><a href="#">about</a>
-					<li><a href="#">@taykcrane</a>
+					<li  class="selected"><a href="#">Hyperlax</a>
+					<li><a href="#"><i class="fa fa-map-marker fa-lg"></i>location</a>
+					<li><a href="#"><i class="fa fa-music fa-lg"></i>music</a>
+					<li><a href="#"><i class="fa fa-info fa-lg"></i>about</a>
+					<li><a href="#" id="heart"><i class="fa fa-heart fa-lg"></i>@taykcrane</a>
 				</ul>
-			</div> -->
-			<div class="header">
+			</div>
+			<!-- <div class="header">
 				<div class="container">
 					<h1>Hyper<span>lax</span></h1>
 					<h3>Explore faraway places just by hitting the <i class="fa fa-forward fa-lg"></i> button.</h3>
@@ -51,20 +51,18 @@
 							<i class="fa fa-quote-left fa-3x"></i>
 							<p></p>
 						</h3>
-						<p class="credit"><!-- Taken by <a href="#" target="_blank"></a> --></p>
+						<p class="credit"></p>
 						<p class="timestamp"></p>
 						<div class="location-group">
 							<h3 class="location">
 								<i class="fa fa-map-marker fa-2x"></i>
 								<p class="location-text"></p>
 							</h3>
-							<!-- <hr class="rule-1" size="1" noshade color="black">
-							<hr class="rule-2" size="1" noshade color="#999"> -->
 							<div id="myMap"></div>
 						</div>
 					</div>	
 				</div>	
-			</div>
+			</div> -->
 			<div class="music-player">
 				<div class="container">
 					<div class="music-box">
