styled the bottom music bar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li><a href="#" id="heart"><i class="fa fa-heart fa-lg"></i>@taykcrane</a>
 				</ul>
 			</div>
-			<!-- <div class="header">
+			<div class="header">
 				<div class="container">
 					<h1>Hyper<span>lax</span></h1>
 					<h3>Explore faraway places just by hitting the <i class="fa fa-forward fa-lg"></i> button.</h3>
@@ -62,11 +62,11 @@
 						</div>
 					</div>	
 				</div>	
-			</div> -->
+			</div>
 			<div class="music-player">
 				<div class="container">
 					<div class="music-box">
-						<div class="volume"><i class="fa fa-volume-up fa-lg"></i></div><div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text-bg"><div class="music-text"><p class="title"></p><p class="uploader"></p></div></div><a href="#" class="sc-logo" target="_blank"></a></div>
+						<div class="volume"><i class="fa fa-volume-up fa-lg"></i></div><div class="music-pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="music-next"><i class="fa fa-forward fa-lg"></i></div><div class="music-data"><div class="music-text-bg"><div class="music-text"><p class="title"></p><p class="uploader"></p></div></div><a href="#" class="sc-logo" target="_blank"><i class="fa fa-soundcloud"></i></a></div>
 					</div>
 				</div>
 			</div>	
