--- a/index.html
+++ b/index.html
@@ -26,42 +26,53 @@
 		<div class="flexitem">
 			<div class="nav">
 				<ul class="nav-items">
-					<li  class="selected"><a href="#">Hyperlax</a>
-					<li><a href="#"><i class="fa fa-map-marker fa-lg"></i>location</a>
-					<li><a href="#"><i class="fa fa-music fa-lg"></i>music</a>
-					<li><a href="#"><i class="fa fa-info fa-lg"></i>about</a>
-					<li><a href="#" id="heart"><i class="fa fa-heart fa-lg"></i>@taykcrane</a>
+					<li class="home-nav selected"><a href="#">Hyperlax</a>
+					<li class="location-nav"><a href="#"><i class="fa fa-map-marker fa-lg"></i>location</a>
+					<li class="music-nav"><a href="#"><i class="fa fa-music fa-lg"></i>music</a>
+					<li class="about-nav"><a href="#"><i class="fa fa-info fa-lg"></i>about</a>
+					<li class="made-nav"><a href="#" id="heart"><i class="fa fa-heart fa-lg"></i>@taykcrane</a>
 				</ul>
 			</div>
-			<div class="header">
-				<div class="container">
-					<h1>Hyper<span>lax</span></h1>
-					<h3>Explore faraway places just by hitting the <i class="fa fa-forward fa-lg"></i> button.</h3>
+			<div class="home-page active-page">
+				<div class="header">
+					<div class="container">
+						<h1>Hyper<span>lax</span></h1>
+						<h3>Explore faraway places just by hitting the <i class="fa fa-forward fa-lg"></i> button.</h3>
+					</div>
+				</div>
+				<div class="content">
+					<div class="container">
+						<div class="metadata">
+							<div class="controls">
+								<div class="buttons">
+									<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
+								</div>
+							</div>
+							<h3 class="caption">
+								<i class="fa fa-quote-left fa-3x"></i>
+								<p></p>
+							</h3>
+							<p class="credit"></p>
+							<p class="timestamp"></p>
+							<div class="location-group">
+								<h3 class="location">
+									<i class="fa fa-map-marker fa-2x"></i>
+									<p class="location-text"></p>
+								</h3>
+								<div id="myMap"></div>
+							</div>
+						</div>	
+					</div>	
 				</div>
 			</div>
-			<div class="content">
-				<div class="container">
-					<div class="metadata">
-						<div class="controls">
-							<div class="buttons">
-								<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
-							</div>
-						</div>
-						<h3 class="caption">
-							<i class="fa fa-quote-left fa-3x"></i>
-							<p></p>
-						</h3>
-						<p class="credit"></p>
-						<p class="timestamp"></p>
-						<div class="location-group">
-							<h3 class="location">
-								<i class="fa fa-map-marker fa-2x"></i>
-								<p class="location-text"></p>
-							</h3>
-							<div id="myMap"></div>
-						</div>
-					</div>	
-				</div>	
+			<div class="location-page">
+				<p>This is my location page.</p>
+			</div>
+			<div class="music-page">
+				<p>this is my music page</p>
+			</div>
+			<div class="about-page">
+				<p>this is my about page</p>
 			</div>
 			<div class="music-player">
 				<div class="container">
