failing to figure out how to position the pages

--- a/index.html
+++ b/index.html
@@ -66,13 +66,25 @@
 				</div>
 			</div>
 			<div class="location-page">
-				<p>This is my location page.</p>
+				<div class="content-box">
+					<div class="container">
+						<p>This is my location page.</p>	
+					</div>
+				</div>
 			</div>
 			<div class="music-page">
-				<p>this is my music page</p>
+				<div class="content-box">
+					<div class="container">
+						<p>this is my music page</p>	
+					</div>
+				</div>
 			</div>
 			<div class="about-page">
-				<p>this is my about page</p>
+				<div class="content-box">
+					<div class="container">
+						<p>this is my about page</p>
+					</div>
+				</div>
 			</div>
 			<div class="music-player">
 				<div class="container">
