beginning to animate the different pages

--- a/index.html
+++ b/index.html
@@ -67,22 +67,28 @@
 			</div>
 			<div class="location-page">
 				<div class="content-box">
-					<div class="container">
-						<p>This is my location page.</p>	
+					<div class="content-animation">
+						<div class="container">
+							<p>This is my location page.</p>	
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="music-page">
 				<div class="content-box">
-					<div class="container">
-						<p>this is my music page</p>	
+					<div class="content-animation">
+						<div class="container">
+							<p>this is my music page</p>	
+						</div>	
 					</div>
 				</div>
 			</div>
 			<div class="about-page">
 				<div class="content-box">
-					<div class="container">
-						<p>this is my about page</p>
+					<div class="content-animation">
+						<div class="container">
+							<p>this is my about page</p>
+						</div>	
 					</div>
 				</div>
 			</div>
