successfully moved Datamap to Location tab

--- a/index.html
+++ b/index.html
@@ -29,17 +29,10 @@
 					<li class="home-nav selected"><a href="#">Hyperlax</a>
 					<li class="location-nav"><a href="#"><i class="fa fa-map-marker fa-lg"></i>location</a>
 					<li class="music-nav"><a href="#"><i class="fa fa-music fa-lg"></i>music</a>
-					<li class="about-nav"><a href="#"><i class="fa fa-info fa-lg"></i>about</a>
-					<li class="made-nav"><a href="#" id="heart"><i class="fa fa-heart fa-lg"></i>@taykcrane</a>
+					<li class="about-nav"><a href="#"><i class="fa fa-info fa-lg"></i>about</a></li><a href="http://twitter.com/taykcrane" id="twitter" target="_blank"><i class="fa fa-twitter fa-lg"></i>@taykcrane</a>
 				</ul>
 			</div>
 			<div class="home-page active-page">
-				<div class="header">
-					<div class="container">
-						<h1>Hyper<span>lax</span></h1>
-						<h3>Explore faraway places just by hitting the <i class="fa fa-forward fa-lg"></i> button.</h3>
-					</div>
-				</div>
 				<div class="content">
 					<div class="container">
 						<div class="metadata">
@@ -48,12 +41,29 @@
 									<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
 								</div>
 							</div>
+							<!-- <div class="location-group">
+								<h3 class="location">
+									<i class="fa fa-map-marker fa-2x"></i>
+									<p class="location-text"></p>
+								</h3>
+								<div id="myMap"></div>
+							</div>
+							<div id="myMap"></div> -->
+							<p class="credit"></p>
+							<p class="timestamp"></p>
+						</div>	
+					</div>
+				</div>
+			</div>
+			<div class="location-page">
+				<div class="content-box">
+					<div class="content-animation">
+						<div class="container">
+							<p>This is my location page.</p>
 							<h3 class="caption">
 								<i class="fa fa-quote-left fa-3x"></i>
 								<p></p>
 							</h3>
-							<p class="credit"></p>
-							<p class="timestamp"></p>
 							<div class="location-group">
 								<h3 class="location">
 									<i class="fa fa-map-marker fa-2x"></i>
@@ -61,15 +71,6 @@
 								</h3>
 								<div id="myMap"></div>
 							</div>
-						</div>	
-					</div>	
-				</div>
-			</div>
-			<div class="location-page">
-				<div class="content-box">
-					<div class="content-animation">
-						<div class="container">
-							<p>This is my location page.</p>	
 						</div>
 					</div>
 				</div>
