fixed callback issue and moved attribution to bottom

--- a/index.html
+++ b/index.html
@@ -41,16 +41,8 @@
 									<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
 								</div>
 							</div>
-							<!-- <div class="location-group">
-								<h3 class="location">
-									<i class="fa fa-map-marker fa-2x"></i>
-									<p class="location-text"></p>
-								</h3>
-								<div id="myMap"></div>
-							</div>
-							<div id="myMap"></div> -->
-							<p class="credit"></p>
-							<p class="timestamp"></p>
+							<!-- <p class="credit"></p>
+							<p class="timestamp"></p> -->
 						</div>	
 					</div>
 				</div>
@@ -92,6 +84,10 @@
 						</div>	
 					</div>
 				</div>
+			</div>
+			<div class="attribution">
+				<p class="credit"></p>
+				<p class="timestamp"></p>
 			</div>
 			<div class="music-player">
 				<div class="container">
