home-page now loads correctly

--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
 				</ul>
 			</div>
 			<div class="home-page active-page">
-				<div class="content">
-					<div class="container">
-						<div class="metadata">
+				<div class="content-box">
+					<div class="content-animation">
+						<div class="container">
 							<div class="controls">
 								<div class="buttons">
 									<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
 								</div>
-							</div>
-							<!-- <p class="credit"></p>
-							<p class="timestamp"></p> -->
+							</div>	
 						</div>	
 					</div>
 				</div>
