--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<script src="//use.typekit.net/bvp2tss.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 	<div class="flexcontainer">
