--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <body>
 	<div class="flexcontainer">
 		<div class="video-box">
+			<div class="location-overlay">
+				<p class="location-overlay-text"></p>
+			</div>
+			<div class="video-controls">
+				<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
+			</div>
 			<div class="video-active">
 				<!-- <video height="640" width="640" autoplay controls>
 					<source src="https://scontent.cdninstagram.com/hphotos-xaf1/t50.2886-16/11107083_958420827501640_1131625644_n.mp4" type="video/mp4">
@@ -38,11 +44,11 @@
 				<div class="content-box">
 					<div class="content-animation">
 						<div class="container">
-							<div class="controls">
+							<!-- <div class="controls">
 								<div class="buttons">
 									<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
 								</div>
-							</div>	
+							</div> -->	
 						</div>	
 					</div>
 				</div>
