began styling hit me button

--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 				<div class="content-box">
 					<div class="content-animation">
 						<div class="container">
-							<!-- <div class="controls">
-								<div class="buttons">
-									<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
-								</div>
-							</div> -->	
+							<div class="start">
+								<h1>HIT ME</h1>
+								<p>Start without music?</p>
+							</div>
 						</div>	
 					</div>
 				</div>
