began styling the home page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
 				<div class="content-box">
 					<div class="content-animation">
 						<div class="container">
-							<div class="start">
-								<h1>HIT ME</h1>
-								<p>Start without music?</p>
+							<div class="top-box">
+								<div class="description">
+									<h5 class="tagline">Enjoy a real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h5>
+									<ul class="instructions">
+										<li>1. Sit back</li>
+										<li>2. Relax</li>
+										<li>3. Explore faraway places</li>
+										<li>4. Feel the music</li>
+									</ul>
+								</div>
+							</div>
+							<div class="bottom-box">
+								<div class="start">
+									<h1>HIT ME</h1>
+									<p>Start without music?</p>
+								</div>
 							</div>
 						</div>	
 					</div>
