added fullscreen mode

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 	<div class="flexcontainer">
-		<div class="video-box">
+		<div class="video-box" id="vid-expand">
 			<div class="location-overlay">
 				<p class="location-overlay-text"></p>
 			</div>
 			<div class="video-controls">
-				<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div>	
+				<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div><div class="expand"><i class="fa fa-arrows-alt fa-lg"></i></div>
 			</div>
 			<div class="video-active">
 				<!-- <video height="640" width="640" autoplay controls>
@@ -47,11 +47,14 @@
 							<div class="top-box">
 								<div class="description">
 									<h5 class="tagline">Enjoy a real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h5>
+									<div id="text-divide">
+										-- <i class="fa fa-instagram"></i> --
+									</div>
 									<ul class="instructions">
-										<li>1. Sit back</li>
-										<li>2. Relax</li>
-										<li>3. Explore faraway places</li>
-										<li>4. Feel the music</li>
+										<li>Sit back</li>
+										<li>Relax</li>
+										<li>Explore faraway places</li>
+										<li>Feel the music</li>
 									</ul>
 								</div>
 							</div>
