got the dark mode like half working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<p class="location-overlay-text"></p>
 			</div>
 			<div class="video-controls">
-				<div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div><div class="expand"><i class="fa fa-arrows-alt fa-lg"></i></div>
+				<div class="lightbulb"><i class="fa fa-lightbulb-o fa-lg"></i></div><div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div><div class="expand"><i class="fa fa-arrows-alt fa-lg"></i></div>
 			</div>
 			<div class="video-active">
 				<!-- <video height="640" width="640" autoplay controls>
@@ -63,6 +63,7 @@
 									<h1>HIT ME</h1>
 									<p>Start without music?</p>
 								</div>
+								<p class="dark-mode">Enter dark mode?</p>
 							</div>
 						</div>	
 					</div>
