almost finished styling the location page

--- a/index.html
+++ b/index.html
@@ -76,17 +76,20 @@
 				<div class="content-box">
 					<div class="content-animation">
 						<div class="container">
-							<p>This is my location page.</p>
-							<h3 class="caption">
-								<i class="fa fa-quote-left fa-3x"></i>
-								<p></p>
-							</h3>
-							<div class="location-group">
-								<h3 class="location">
-									<i class="fa fa-map-marker fa-2x"></i>
-									<p class="location-text"></p>
-								</h3>
-								<div id="myMap"></div>
+							<div class="top-box">
+								<div class="location-group">
+									<h3 class="location">
+										<i class="fa fa-map-marker fa-3x"></i>
+										<p class="location-text"></p>
+									</h3>
+									<div id="myMap"></div>
+								</div>
+							</div>
+							<div class="bottom-box">
+								<h3 class="caption">
+									<i class="fa fa-quote-left fa-3x"></i>
+									<p></p>
+								</h3>						
 							</div>
 						</div>
 					</div>
