--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
 						<div class="container">
 							<div class="top-box">
 								<div class="location-group">
-									<h3 class="location">
+									<div class="location">
 										<i class="fa fa-map-marker fa-3x"></i>
 										<p class="location-text"></p>
-									</h3>
-									<div id="myMap"></div>
+									</div>
 								</div>
 							</div>
 							<div class="bottom-box">
-								<h3 class="caption">
+								<div id="myMap"></div>
+								<div class="caption">
 									<i class="fa fa-quote-left fa-3x"></i>
 									<p></p>
-								</h3>						
+								</div>						
 							</div>
 						</div>
 					</div>
@@ -149,6 +149,7 @@
 <script src="js/pause.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://connect.soundcloud.com/sdk.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/trunk8/1.3.3/trunk8.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
