added the location toggle, no functionality yet

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 							</div>
 							<div class="bottom-box">
 								<div id="myMap"></div>
+								<div class="location-overlay-toggle">
+									<p>Display location over video?</p>
+									<div class="onoffswitch">
+									    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+									    <label class="onoffswitch-label" for="myonoffswitch">
+									        <span class="onoffswitch-inner"></span>
+									        <span class="onoffswitch-switch"></span>
+									    </label>
+									</div>
+								</div>
 								<div class="caption">
 									<i class="fa fa-quote-left fa-3x"></i>
 									<p></p>
