--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://connect.soundcloud.com/sdk.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/trunk8/1.3.3/trunk8.js"></script>
+<script src="js/ResizeSensor.js"></script>
+<script src="js/ElementQueries.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
