made site responsive with element queries

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 		<div class="flexitem">
 			<div class="nav">
 				<ul class="nav-items">
-					<li class="home-nav selected"><a href="#">Hyperlax</a>
-					<li class="location-nav"><a href="#"><i class="fa fa-map-marker fa-lg"></i>location</a>
-					<li class="music-nav"><a href="#"><i class="fa fa-music fa-lg"></i>music</a>
-					<li class="about-nav"><a href="#"><i class="fa fa-info fa-lg"></i>about</a></li><a href="http://twitter.com/taykcrane" id="twitter" target="_blank"><i class="fa fa-twitter fa-lg"></i>@taykcrane</a>
+					<li class="home-nav selected"><a href="#"><span>Hyperlax</span></a>
+					<li class="location-nav"><a href="#"><i class="fa fa-map-marker fa-lg"></i><span>location</span></a>
+					<li class="music-nav"><a href="#"><i class="fa fa-music fa-lg"></i><span>music</span></a>
+					<li class="about-nav"><a href="#"><i class="fa fa-info fa-lg"></i><span>about</span></a></li><a href="http://twitter.com/taykcrane" id="twitter" target="_blank"><i class="fa fa-twitter fa-lg"></i><span>@taykcrane</span></a>
 				</ul>
 			</div>
 			<div class="home-page active-page">
