--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 									<h1>HIT ME</h1>
 									<p><span>Start without music?</span></p>
 								</div>
+								<div class="spinner">
+								  <div class="rect1"></div>
+								  <div class="rect2"></div>
+								  <div class="rect3"></div>
+								  <div class="rect4"></div>
+								  <div class="rect5"></div>
+								</div>
 								<p class="dark-mode">Enter dark mode?</p>
 							</div>
 						</div>	
