--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<div class="flexcontainer">
 		<div class="video-box" id="vid-expand">
 			<div class="location-overlay">
-				<p class="location-overlay-text"></p>
 			</div>
 			<div class="video-controls">
 				<div class="lightbulb"><i class="fa fa-lightbulb-o fa-lg"></i></div><div class="prev"><i class="fa fa-backward fa-lg"></i></div><div class="pause-play"><i class="fa fa-pause fa-lg"></i></div><div class="next"><i class="fa fa-forward fa-lg"></i></div><div class="expand"><i class="fa fa-arrows-alt fa-lg"></i></div>
@@ -178,6 +177,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/trunk8/1.3.3/trunk8.js"></script>
 <script src="js/ResizeSensor.js"></script>
 <script src="js/ElementQueries.js"></script>
+<script src="js/bowser.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
