shows error message when device or browser is not supported

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
+	<div class="overlay">
+		<div class="overlay-content">
+			<h1>Gah!</h1>
+			<p>Looks like you're using a browser or a device that doesn't work well with Hyperlax. The site will only work on desktop/laptops (no mobile or tablet devices), and must be one of the below browsers. This is primarily due to the continuous video playback. But trust me, it's worth it!</p>
+			<ul>
+				<li><a href="https://www.google.com/chrome/browser/desktop/index.html">Google Chrome, Version 32+</a></li>
+				<li><a href="https://www.mozilla.org/en-US/firefox/new/?scene=2#download-fx">Mozilla Firefox, Version 35+</a></li>
+				<li><a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">Internet Explorer 11+</a></li>
+				<li><a href="https://support.apple.com/downloads/safari">Apple Safari, Version 8+</a></li>
+				<li></li>
+			</ul>
+			<p>Think you're seeing this message in error? Please let me know at taylorkcrane@gmail.com</p>
+		</div>
+	</div>
 	<div class="flexcontainer">
 		<div class="video-box" id="vid-expand">
 			<div class="location-overlay">
