added social share buttons

--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 								  <div class="rect4"></div>
 								  <div class="rect5"></div>
 								</div>
-								<p class="dark-mode">Enter dark mode?</p>
+								<div class="social-share">
+									<p>cool enough to share?</p>
+									<a class="social-popup" href="https://twitter.com/intent/tweet/?text=Enjoy%20a%20real-time%20feed%20of%20Instagram's%20latest%20%23Hyperlapse%20videos:%20&url=http%3A%2F%2Fhyperlax.tv&via=taykcrane" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+									<a class="social-popup" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhyperlax.tv" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+								</div>
+								<p class="dark-mode"><i class="fa fa-lightbulb-o fa-3x"></i></p>
 							</div>
 						</div>	
 					</div>
