made some SEO tweakz

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos</title>
+	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!">
+	<meta name="keyword" content="hyperlax, hyperlax.tv, hyperlapse, instagram, video, videos, made in nyc, taykcrane, taylor crane, real-time, soundcloud">
 	<meta charset="UTF-8">
 	<meta name="google" content="notranslate" />
 	<meta http-equiv="Content-Language" content="en_US" />
-	<title>Hyperlax</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -23,20 +25,6 @@
 	</script>
 </head>
 <body>
-	<div class="overlay">
-		<div class="overlay-content">
-			<h1>Gah!</h1>
-			<p>Looks like you're using a browser or a device that doesn't work well with Hyperlax. The site will only work on desktop/laptops (no mobile or tablet devices), and must be one of the below browsers. This is primarily due to the continuous video playback. But trust me, it's worth it!</p>
-			<ul>
-				<li><a href="https://www.google.com/chrome/browser/desktop/index.html">Google Chrome, Version 32+</a></li>
-				<li><a href="https://www.mozilla.org/en-US/firefox/new/?scene=2#download-fx">Mozilla Firefox, Version 35+</a></li>
-				<li><a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">Internet Explorer 11+</a></li>
-				<li><a href="https://support.apple.com/downloads/safari">Apple Safari, Version 8+</a></li>
-				<li></li>
-			</ul>
-			<p>Think you're seeing this message in error? Please let me know at taylorkcrane@gmail.com</p>
-		</div>
-	</div>
 	<div class="flexcontainer">
 		<div class="video-box" id="vid-expand">
 			<div class="location-overlay">
@@ -70,7 +58,7 @@
 						<div class="container">
 							<div class="top-box">
 								<div class="description">
-									<h5 class="tagline">Enjoy a real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h5>
+									<h1 class="tagline">Enjoy a real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h1>
 									<div id="text-divide">
 										-- <i class="fa fa-instagram"></i> --
 									</div>
@@ -190,6 +178,20 @@
 					</div>
 				</div>
 			</div>	
+		</div>
+	</div>
+	<div class="overlay">
+		<div class="overlay-content">
+			<h1>Gah!</h1>
+			<p>Looks like you're using a browser or a device that doesn't work well with Hyperlax. The site will only work on desktop/laptops (no mobile or tablet devices), and must be one of the below browsers. This is primarily due to the continuous video playback. But trust me, it's worth it!</p>
+			<ul>
+				<li><a href="https://www.google.com/chrome/browser/desktop/index.html">Google Chrome, Version 32+</a></li>
+				<li><a href="https://www.mozilla.org/en-US/firefox/new/?scene=2#download-fx">Mozilla Firefox, Version 35+</a></li>
+				<li><a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">Internet Explorer 11+</a></li>
+				<li><a href="https://support.apple.com/downloads/safari">Apple Safari, Version 8+</a></li>
+				<li></li>
+			</ul>
+			<p>Think you're seeing this message in error? Please let me know at taylorkcrane@gmail.com</p>
 		</div>
 	</div>
 	
