adding new playlists

--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
 							</div>
 							<div class="bottom-box">
 								<ul class="playlist-choices">
-									<li class="selected" id="9875415"><span class="playlist-name">Chill</span><span class="num-likes"><i class="fa fa-heart-o"></i> 5k</span><div style="clear: both;"></div></li>
-									<li id="8382286"><span class="playlist-name">Electronic</span><span class="num-likes"><i class="fa fa-heart-o"></i> 3k</span><div style="clear: both;"></div></li>
-									<li><span class="playlist-name">Hip-hop</span><span class="num-likes"><i class="fa fa-heart-o"></i> 2k</span><div style="clear: both;"></div></li>
-									<li><span class="playlist-name">Indie/Alt</span><span class="num-likes"><i class="fa fa-heart-o"></i> 2k</span><div style="clear: both;"></div></li>
-									<li><span class="playlist-name">Study</span><span class="num-likes"><i class="fa fa-heart-o"></i> 1k</span><div style="clear: both;"></div></li>
+									<li class="selected" id="9875415"><span class="playlist-name">Chill</span><span class="num-likes"><i class="fa fa-heart-o"></i> 1.1k</span><div style="clear: both;"></div></li>
+									<li id="8382286"><span class="playlist-name">Electronic</span><span class="num-likes"><i class="fa fa-heart-o"></i> 2.2k</span><div style="clear: both;"></div></li>
+									<li id="14420313"><span class="playlist-name">Piano</span><span class="num-likes"><i class="fa fa-heart-o"></i> 37</span><div style="clear: both;"></div></li>
+									<li id="51184003"><span class="playlist-name">Ambient</span><span class="num-likes"><i class="fa fa-heart-o"></i> 20</span><div style="clear: both;"></div></li>
+									<li id="13709692"><span class="playlist-name">Chill Hip-Hop</span><span class="num-likes"><i class="fa fa-heart-o"></i> 58</span><div style="clear: both;"></div></li>
+									<li id="45264103"><span class="playlist-name">Artist of the Week</span><span class="num-likes"><i class="fa fa-heart-o"></i> ??</span><div style="clear: both;"></div></li>
 								</ul>
 							</div>
 						</div>	
