added open graph meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 	<title>Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos</title>
-	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!">
+	<meta property="og:title" content="Hyperlax - Enjoy a real-time feed of Instagram's latest #Hyperlapse videos"/>
+	<meta property="og:site_name" content="Hyperlax"/>
+	<meta name="description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!" />
+	<meta property="og:description" content="Hyperlax is a real-time feed of Instagram's latest #Hyperlapse videos. Enjoy a peak into the lives of others, from locations around the world. Hyperlax is meant to be a bit of an escape, a bit voyueristic, a bit relaxing. I think it's mesmerising. Maybe you will too!" />
 	<meta name="keyword" content="hyperlax, hyperlax.tv, hyperlapse, instagram, video, videos, made in nyc, taykcrane, taylor crane, real-time, soundcloud">
-	<meta charset="UTF-8">
+	<meta charset="UTF-8" />
 	<meta name="google" content="notranslate" />
 	<meta http-equiv="Content-Language" content="en_US" />
 	<link rel="stylesheet" href="css/reset.css">
@@ -12,7 +15,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<script src="//use.typekit.net/bvp2tss.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -69,7 +72,7 @@
 										<li>--</li>
 										<li>Explore faraway places</li>
 										<li>--</li>
-										<li>Feel the music</li>
+										<li>Groove to the music</li>
 									</ul>
 								</div>
 							</div>
@@ -139,7 +142,7 @@
 							<div class="bottom-box">
 								<ul class="playlist-choices">
 									<li class="selected" id="9875415"><span class="playlist-name">Chill</span><span class="num-likes"><i class="fa fa-heart-o"></i> 1.1k</span><div style="clear: both;"></div></li>
-									<li id="8382286"><span class="playlist-name">Electronic</span><span class="num-likes"><i class="fa fa-heart-o"></i> 2.2k</span><div style="clear: both;"></div></li>
+									<li id="6870254"><span class="playlist-name">Electronic</span><span class="num-likes"><i class="fa fa-heart-o"></i> 6</span><div style="clear: both;"></div></li>
 									<li id="14420313"><span class="playlist-name">Piano</span><span class="num-likes"><i class="fa fa-heart-o"></i> 37</span><div style="clear: both;"></div></li>
 									<li id="51184003"><span class="playlist-name">Ambient</span><span class="num-likes"><i class="fa fa-heart-o"></i> 20</span><div style="clear: both;"></div></li>
 									<li id="13709692"><span class="playlist-name">Chill Hip-Hop</span><span class="num-likes"><i class="fa fa-heart-o"></i> 58</span><div style="clear: both;"></div></li>
