refactored the hit me button

--- a/index.html
+++ b/index.html
@@ -63,22 +63,24 @@
 								<div class="description">
 									<h1 class="tagline">Enjoy a real-time feed of Instagram's latest <a href="https://itunes.apple.com/us/app/hyperlapse-from-instagram/id740146917" target="_blank">#hyperlapse</a> videos.</h1>
 									<div id="text-divide">
-										-- <i class="fa fa-instagram"></i> --
+										<i class="fa fa-instagram fa-lg"></i>
 									</div>
 									<ul class="instructions">
 										<li>Sit back</li>
-										<li>--</li>
+										<li>-</li>
 										<li>Relax</li>
-										<li>--</li>
+										<li>-</li>
 										<li>Explore faraway places</li>
-										<li>--</li>
-										<li>Groove to the music</li>
+										<li>-</li>
+										<li>Move to the music</li>
 									</ul>
 								</div>
 							</div>
 							<div class="bottom-box">
 								<div class="start">
-									<h1>HIT ME</h1>
+									<div class="hit-me">
+										<i class="fa fa-play-circle-o fa-3x"></i><h1>HIT ME</h1>
+									</div>
 									<p><span>Start without music?</span></p>
 								</div>
 								<div class="spinner">
