--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 										<i class="fa fa-instagram fa-lg"></i>
 									</div>
 									<ul class="instructions">
-										<li>Sit back</li>
-										<li>-</li>
-										<li>Relax</li>
-										<li>-</li>
-										<li>Explore faraway places</li>
-										<li>-</li>
-										<li>Move to the music</li>
+										<li>SIT BACK</li>
+										<li>&bull;</li>
+										<li>RELAX</li>
+										<li>&bull;</li>
+										<li>EXPLORE FARAWAY PLACES</li>
+										<li>&bull;</li>
+										<li>ENJOY THE MUSIC</li>
 									</ul>
 								</div>
 							</div>
